tests/fsharp/core/csfromfs/nested-types-error.bsl

nested-types-error.fs(8,8,8,27): typecheck error FS0491: The member or object constructor 'ProtectedMethod' is not accessible. Private members may only be accessed from within the declaring type. Protected members may only be accessed from an extending type and cannot be accessed from inner lambda expressions.

nested-types-error.fs(9,13,9,32): typecheck error FS0491: The member or object constructor 'ProtectedProperty' is not accessible. Private members may only be accessed from within the declaring type. Protected members may only be accessed from an extending type and cannot be accessed from inner lambda expressions.

nested-types-error.fs(14,8,14,27): typecheck error FS0491: The member or object constructor 'ProtectedMethod' is not accessible. Private members may only be accessed from within the declaring type. Protected members may only be accessed from an extending type and cannot be accessed from inner lambda expressions.

nested-types-error.fs(15,13,15,32): typecheck error FS0491: The member or object constructor 'ProtectedProperty' is not accessible. Private members may only be accessed from within the declaring type. Protected members may only be accessed from an extending type and cannot be accessed from inner lambda expressions.

nested-types-error.fs(18,13,18,55): typecheck error FS0801: This type has no accessible object constructors

nested-types-error.fs(26,9,26,36): typecheck error FS0801: This type has no accessible object constructors

nested-types-error.fs(27,9,27,57): typecheck error FS0801: This type has no accessible object constructors

nested-types-error.fs(28,9,28,36): typecheck error FS0801: This type has no accessible object constructors

nested-types-error.fs(29,9,29,51): typecheck error FS0801: This type has no accessible object constructors
